<resources>
    <string name="app_name">What Cats?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="buttonUpload">Select Image</string>
    <string name="Upload">Upload</string>
    <string name="catimage">catimage</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="action_search">Search</string>
    <string name="toolbar_title">History of Scanned</string>
    <string name="search_hint">Search…</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_hahaha">hahaha</string>
    <string name="title_activity_anjir">anjir</string>
</resources>
