<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#330066"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context="com.xtrasilent.whatcats.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="287dp"
        android:layout_height="220dp"
        android:layout_marginBottom="20dp"
        android:scaleType="matrix"
        android:src="@mipmap/cat" />


    <EditText
        android:id="@+id/etFullName"
        android:layout_width="326dp"
        android:layout_height="34dp"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="14sp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="340dp"
        android:layout_height="31dp"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="14sp" />


    <EditText
        android:id="@+id/etPassword"
        android:layout_width="331dp"
        android:layout_height="31dp"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="321dp"
        android:layout_height="33dp"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="321dp"
        android:layout_height="31dp"
        android:layout_margin="5dp"
        android:background="#cc0000"
        android:text="@string/register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="320dp"
        android:layout_height="29dp"
        android:layout_margin="5dp"
        android:background="#3399ff"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        android:visibility="visible" />

</LinearLayout>
